prowlarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: service
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
