prowlarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: prowlarr
  annotations:
    spec.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  #tls:
  #  - hosts:
  #      - prowlarr.nuc.lan
  #    secretName: prowlarr-tls
  rules:
    - host: prowlarr.nuc.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 9696
    - host: prowlarr.nanova.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 9696
